[tool.poetry]
name = "praso-test"
version = "0.1.0"
description = ""
authors = ["DiegoFreitasDS <diegop.freitas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
notebook = "^7.1.3"
streamlit = "^1.33.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
